src/test/ui/issues/issue-18294.stderr
error[E0658]: casting pointers to integers in constants is unstable (see issue #51910)
  --> $DIR/issue-18294.rs:13:22
   |
LL |     const Y: usize = &X as *const u32 as usize; //~ ERROR is unstable
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(const_raw_ptr_to_usize_cast)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
